test-app/tmp/test-app-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: test-app
